--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
   <h1>Note Chat</h1>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    let socket = io();//this one starts the polling in client side
+
+    socket.on('connect',()=>{
+      console.log(socket.id,' is connected to server');
+    })
+
+    socket.on('disconnect',()=>{
+      console.log(socket.id,' is disconnected from server');
+    })
+  </script>
 </body>
 </html>
