--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,6 @@
 <body>
   <h1>Note Chat</h1>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    let socket = io();//this one starts the polling in client side
-
-    socket.on('connect',()=>{
-      console.log(socket.id,' is connected to server');
-    })
-
-    socket.on('disconnect',()=>{
-      console.log(socket.id,' is disconnected from server');
-    })
-  </script>
+  <script src="/js/index.js"></script>
 </body>
 </html>
